objects/ssot__LoyaltyProgramMemberAttributeValue__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CumulativeValueNumber__c</fullName>
        <label>Cumulative Value</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__CurrentValueText__c</fullName>
        <label>Current Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EndDate__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Loyalty Pgm Member Attribute Value Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LastResetDate__c</fullName>
        <label>Last Reset Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__LoyaltyPgmEngmtAttributeId__c</fullName>
        <label>Loyalty Program Engagement Attribute</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__LoyaltyProgramMemberId__c</fullName>
        <label>Loyalty Program Member</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ResetCount__c</fullName>
        <label>Reset Count Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__StartDate__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761223810_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LoyaltyProgramMemberAttributeValue_L_rel</label>
        <referenceTo>ssot__LoyaltyProgramMember__dlm</referenceTo>
        <relationshipLabel>LoyaltyProgramMemberAttributeValue_L_rel</relationshipLabel>
        <relationshipName>rel_1697761223810_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761224777_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LoyaltyProgramMemberAttributeValue_L_rel</label>
        <referenceTo>ssot__LoyaltyProgramEngagementAttribute__dlm</referenceTo>
        <relationshipLabel>LoyaltyProgramMemberAttributeValue_L_rel</relationshipLabel>
        <relationshipName>rel_1697761224777_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>